[gd_scene load_steps=5 format=3 uid="uid://3rag8ryq14yy"]

[ext_resource type="Script" path="res://src/scripts/game_control.gd" id="1_veebc"]
[ext_resource type="PackedScene" uid="uid://blk68hjn5uffs" path="res://src/scenes/card_pile.tscn" id="2_mehgf"]
[ext_resource type="PackedScene" uid="uid://dohoiuo4sw78b" path="res://src/scenes/card.tscn" id="3_wnvir"]
[ext_resource type="PackedScene" uid="uid://ccy1qjacl7xc2" path="res://src/scenes/hand.tscn" id="4_j8uts"]

[node name="Game Control" type="Node2D" node_paths=PackedStringArray("map_vp", "drawpile_node", "discardpile_node")]
script = ExtResource("1_veebc")
map_vp = NodePath("SubViewportContainer/Map Subviewport")
drawpile_node = NodePath("Draw Pile")
discardpile_node = NodePath("Discard Pile")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -100
offset_right = 643.0
offset_bottom = 512.0

[node name="Map Subviewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Draw Pile" parent="." node_paths=PackedStringArray("hand_node", "reshuffle_from") instance=ExtResource("2_mehgf")]
z_index = 1
offset_left = 12.0
offset_top = 416.0
offset_right = 87.0
offset_bottom = 526.0
hand_node = NodePath("../Hand")
card_frame = ExtResource("3_wnvir")
reshuffle_from = NodePath("../Discard Pile")
ui_position_v = 1
ui_position_h = 0

[node name="Discard Pile" parent="." node_paths=PackedStringArray("hand_node") instance=ExtResource("2_mehgf")]
z_index = 1
offset_left = 871.0
offset_top = 422.0
offset_right = 946.0
offset_bottom = 532.0
hand_node = NodePath("../Hand")
card_frame = ExtResource("3_wnvir")
ui_position_v = 1
ui_position_h = 1

[node name="debug_cards_to_drawpile" type="Button" parent="."]
offset_left = 23.0
offset_top = 77.0
offset_right = 234.0
offset_bottom = 108.0
text = "DEBUG ADD TO DRAWPILE"

[node name="debug_draw_cards" type="Button" parent="."]
offset_left = 23.0
offset_top = 120.0
offset_right = 199.0
offset_bottom = 151.0
text = "DEBUG DRAW CARD"

[node name="debug_regenerate" type="Button" parent="."]
offset_left = 22.0
offset_top = 162.0
offset_right = 198.0
offset_bottom = 193.0
text = "DEBUG REGENERATE"

[node name="Hand" parent="." instance=ExtResource("4_j8uts")]

[connection signal="pressed" from="debug_cards_to_drawpile" to="." method="_on_debug_cards_to_drawpile_pressed"]
[connection signal="pressed" from="debug_draw_cards" to="." method="_on_debug_draw_cards_pressed"]
[connection signal="pressed" from="debug_regenerate" to="." method="_on_debug_regenerate_pressed"]
